vignette: added tidyverse library for recently added code chunk

--- a/vignettes/migbirdHIP_workflow.Rmd
+++ b/vignettes/migbirdHIP_workflow.Rmd
@@ -141,6 +141,55 @@ For HIP processing, this function is used in conjunction with other R code to ac
 
 
 ```r
+library(tidyverse)
+```
+
+```
+## Warning: package 'tidyverse' was built under R version 4.0.5
+```
+
+```
+## -- Attaching packages -------------------------------- tidyverse 1.3.1 --
+```
+
+```
+## v ggplot2 3.3.5     v purrr   0.3.4
+## v tibble  3.1.4     v dplyr   1.0.7
+## v tidyr   1.1.3     v stringr 1.4.0
+## v readr   2.0.1     v forcats 0.5.1
+```
+
+```
+## Warning: package 'ggplot2' was built under R version 4.0.5
+```
+
+```
+## Warning: package 'tibble' was built under R version 4.0.5
+```
+
+```
+## Warning: package 'tidyr' was built under R version 4.0.5
+```
+
+```
+## Warning: package 'readr' was built under R version 4.0.5
+```
+
+```
+## Warning: package 'dplyr' was built under R version 4.0.5
+```
+
+```
+## Warning: package 'forcats' was built under R version 4.0.5
+```
+
+```
+## -- Conflicts ----------------------------------- tidyverse_conflicts() --
+## x dplyr::filter() masks stats::filter()
+## x dplyr::lag()    masks stats::lag()
+```
+
+```r
 # Snooping
 snoop <-
   DL1301 %>%
@@ -154,7 +203,10 @@ snoop <-
 ```
 
 ```
-## Error in DL1301 %>% filter(!str_detect(birth_date, "^[0-9]{2}\\/[0-9]{2}\\/[0-9]{4}$")) %>% : could not find function "%>%"
+## # A tibble: 1 x 2
+##   record_key   n_shift
+##   <chr>          <dbl>
+## 1 record_32904       1
 ```
 
 ```r
@@ -181,21 +233,11 @@ unshifted <-
         str_detect(birth_date, "^[0-9]{1}\\/"),
         paste0("0", birth_date),
         birth_date))
-```
 
-```
-## Error in map_dfr(1:length(snoop$record_key), ~shiftFix(DL1301, snoop$record_key[.x], : could not find function "%>%"
-```
-
-```r
 DL1301_unshifted <-
   DL1301 %>%
   filter(!record_key %in% unshifted$record_key) %>%
   bind_rows(unshifted)
-```
-
-```
-## Error in DL1301 %>% filter(!record_key %in% unshifted$record_key) %>% : could not find function "%>%"
 ```
 
 ### clean
@@ -205,10 +247,6 @@ After data are read and unshifted, we `clean`:
 
 ```r
 DL1301_clean <- clean(DL1301_unshifted)
-```
-
-```
-## Error in filter(., !is.na(firstname)): object 'DL1301_unshifted' not found
 ```
 
 This function does simple data cleaning. Importantly, records are discarded if first name, last name, birth date, address, state of residence, OR city AND zip are missing.
@@ -237,9 +275,7 @@ The `findDuplicates` function finds hunters that have more than one registration
 findDuplicates(DL1301_clean)
 ```
 
-```
-## Error in tbl_vars_dispatch(x): object 'DL1301_clean' not found
-```
+<img src="figure/findDuplicates-1.png" title="Figure 1. Plot of types of duplicates." alt="Figure 1. Plot of types of duplicates." width="500" style="display: block; margin: auto;" />
 
 
 ```r
@@ -247,7 +283,22 @@ findDuplicates(DL1301_clean, return = "table")
 ```
 
 ```
-## Error in tbl_vars_dispatch(x): object 'DL1301_clean' not found
+## # A tibble: 13 x 2
+##    dupl                                         count
+##    <chr>                                        <int>
+##  1 address                                          2
+##  2 address-city                                     1
+##  3 address-email                                    2
+##  4 address-zip-email                                1
+##  5 address-zip-issue_date                           1
+##  6 bag                                            480
+##  7 email                                            2
+##  8 issue_date                                      25
+##  9 issue_date-dl_date                               1
+## 10 issue_date-hunt_mig_birds-dl_date                3
+## 11 middle                                           5
+## 12 middle-address-city-zip-hunt_mig_birds-email     1
+## 13 suffix-issue_date-email                          1
 ```
 
 ### fixDuplicates
@@ -271,10 +322,6 @@ Note: This function replaces "." values with NA in non-permit species columns fo
 DL1301_fixed <- fixDuplicates(DL1301_clean)
 ```
 
-```
-## Error in group_by(., firstname, lastname, state, birth_date, dl_state, : object 'DL1301_clean' not found
-```
-
 ### strataCheck
 
 Running `strataCheck` ensures species "bag" values are in order. This function searches for values in species group columns that are not typical or expected by the FWS. If a value outside of the normal range is detected, an output tibble is created. Each row in the output contains the state, species, unusual stratum value, and a list of the normal values we would expect.
@@ -287,7 +334,20 @@ strataCheck(DL1301_fixed)
 ```
 
 ```
-## Error in select(., dl_state, ducks_bag:seaducks): object 'DL1301_fixed' not found
+## # A tibble: 121 x 4
+##    dl_state spp                state_strata normal_strata
+##    <chr>    <chr>              <chr>        <chr>        
+##  1 OR       dove_bag           0            1, 2, 3, 5   
+##  2 OR       ducks_bag          0            1, 2, 3, 4   
+##  3 OR       geese_bag          0            1, 2, 3, 4   
+##  4 OR       band_tailed_pigeon 0            1, 2         
+##  5 OR       brant              0            1, 2         
+##  6 OR       coots_snipe        0            1, 2         
+##  7 OR       seaducks           0            1, 2         
+##  8 AK       band_tailed_pigeon 0            <NA>         
+##  9 AK       dove_bag           0            <NA>         
+## 10 AK       rails_gallinules   0            <NA>         
+## # ... with 111 more rows
 ```
 
 ### validate
@@ -302,7 +362,20 @@ validate(DL1301_fixed, type = "horizontal")
 ```
 
 ```
-## Error in select(., source_file, ducks_bag, geese_bag, dove_bag, woodcock_bag): object 'DL1301_fixed' not found
+## # A tibble: 43 x 5
+##    source_file    h_value h_rep h_total prop_repeat
+##    <chr>          <chr>   <int>   <int>       <dbl>
+##  1 WI20211229.txt 1         276     323       0.854
+##  2 AL20211229.txt 1        3995    4790       0.834
+##  3 MO20211229.txt 1        2680    3604       0.744
+##  4 WV20211229.txt 2         183     294       0.622
+##  5 IN20211229.txt 1         406     690       0.588
+##  6 MN20211229.txt 1         171     297       0.576
+##  7 WA20211229.txt 1         815    1460       0.558
+##  8 WA20211215.txt 1         937    1737       0.539
+##  9 KY20211228.txt 1         528     984       0.537
+## 10 NE20211217.txt 1         477     903       0.528
+## # ... with 33 more rows
 ```
 
 <b>Vertically.</b> The vertical check searches within each column for repetition. Any species group column with the same value in all rows will be detected. *Coming soon:* States that do not have a hunting season for one or more species groups (e.g. seaducks) will not be returned using this function for reporting all zero values. The default version of this function (`all = FALSE`) only checks duck bags. If the parameter is set to `all = TRUE`, every species group will be checked.
@@ -310,9 +383,6 @@ validate(DL1301_fixed, type = "horizontal")
 The two time period options to assess vertical repetition are `period = "dl_date"` (used automatically)...
 
 
-```
-## Error in DL1301_fixed %>% mutate(ducks_bag = ifelse(dl_state == "AK", : could not find function "%>%"
-```
 
 
 ```r
@@ -320,7 +390,10 @@ validate(DL1301_fixed, type = "vertical")
 ```
 
 ```
-## Error in select(., dl_state, dl_date, ducks_bag): object 'DL1301_fixed' not found
+## # A tibble: 1 x 4
+##   dl_state dl_date  species_grp v_repeated
+##   <chr>    <chr>    <chr>            <int>
+## 1 AK       20211228 ducks_bag           65
 ```
 
 ... and `period = "dl_cycle"`.
@@ -331,7 +404,10 @@ validate(DL1301_fixed, type = "vertical", period = "dl_cycle")
 ```
 
 ```
-## Error in select(., dl_state, {: object 'DL1301_fixed' not found
+## # A tibble: 1 x 4
+##   dl_state dl_cycle species_grp v_repeated
+##   <chr>    <chr>    <chr>            <int>
+## 1 AK       1301     ducks_bag           65
 ```
 
 It is not possible to include as much detail in the vertical output as in the horizontal output without being specific about which state, species, and time scale you wish to assess. Vertical repetition returned in the output from this function can be looked at more closely using `investigate`.
@@ -353,7 +429,10 @@ investigate(
 ```
 
 ```
-## Error in select(., dl_state, {: object 'DL1301_fixed' not found
+## # A tibble: 1 x 2
+##   ducks_bag source_file   
+##   <chr>     <chr>         
+## 1 3         AK20211228.txt
 ```
 
 ## Part B: Data Proofing and Correction
@@ -365,10 +444,6 @@ After data are cleaned and checked for any important issues that would require m
 
 ```r
 DL1301_proofed <- proof(DL1301_fixed, year = 2021)
-```
-
-```
-## Error in mutate(., temp_key = paste0("row_", row_number())): object 'DL1301_fixed' not found
 ```
 
 Data that are considered irregular are flagged in a new column called "errors". No actual corrections take place in this step; all data remain identical except for the new "errors" column. For each field, values are compared to standard expected formats and if they do not conform, the field name is pasted as a string in the "errors" column. Each row can have from zero errors (NA) to all column names listed. Multiple flags are hyphen delimited.
@@ -385,7 +460,24 @@ DL1301_corrected <- correct(DL1301_proofed, year = 2021, data = "bag")
 ```
 
 ```
-## Error in mutate(., errors = ifelse(is.na(errors), "none", errors), title = ifelse(str_detect(errors, : object 'DL1301_proofed' not found
+## Warning: Zip codes detected that do not correspond to provided state of residence.
+```
+
+```
+## # A tibble: 129 x 4
+##    record_key  zip        state zipState
+##    <chr>       <chr>      <chr> <chr>   
+##  1 record_892  71646      AZ    AR      
+##  2 record_1214 53473      AL    WI      
+##  3 record_1334 30152-4158 AL    GA      
+##  4 record_1706 25652      AL    WV      
+##  5 record_2217 35959      GA    AL      
+##  6 record_3432 32567      AL    FL      
+##  7 record_3448 30456      AL    GA      
+##  8 record_3825 36005      FL    AL      
+##  9 record_4202 20097      NC    DC      
+## 10 record_4706 29744      NC    SC      
+## # ... with 119 more rows
 ```
 
 The following changes are made by the `correct` function:
@@ -455,7 +547,7 @@ pullErrors(DL1301_proofed, error = "dove_bag")
 ```
 
 ```
-## Error in select(., error, errors): object 'DL1301_proofed' not found
+## [1] "4"
 ```
 
 ### manualFix
@@ -506,9 +598,7 @@ The `outOfStateHunters` function plots and tabulates how many hunters registered
 outOfStateHunters(DL1301_proofed)
 ```
 
-```
-## Error in select(., state, dl_state): object 'DL1301_proofed' not found
-```
+<img src="figure/outofstate-1.png" title="Figure 6. Plot of proportions of out-of-state hunters." alt="Figure 6. Plot of proportions of out-of-state hunters." width="500" style="display: block; margin: auto;" />
 
 ### youthHunters
 
@@ -519,9 +609,7 @@ The `youthHunters` function returns a table and plot of the number of hunters wi
 youthHunters(DL1301_proofed, year = 2021)
 ```
 
-```
-## Error in group_by(., dl_state): object 'DL1301_proofed' not found
-```
+<img src="figure/youth-1.png" title="Figure 7. Plot of proportions of youth hunters." alt="Figure 7. Plot of proportions of youth hunters." width="500" style="display: block; margin: auto;" />
 
 ### errorPlot_fields
 
@@ -532,9 +620,7 @@ The `errorPlot_fields` function can be run on all states...
 errorPlot_fields(DL1301_proofed, loc = "all", year = 2021)
 ```
 
-```
-## Error in select(., errors): object 'DL1301_proofed' not found
-```
+<img src="figure/errorfieldsplotall-1.png" title="Figure 2. Plot of all location's errors by field name." alt="Figure 2. Plot of all location's errors by field name." width="500" style="display: block; margin: auto;" />
 
 ... or it can be limited to just one.
 
@@ -543,9 +629,7 @@ errorPlot_fields(DL1301_proofed, loc = "all", year = 2021)
 errorPlot_fields(DL1301_proofed, loc = "LA", year = 2021)
 ```
 
-```
-## Error in filter(., dl_state == loc): object 'DL1301_proofed' not found
-```
+<img src="figure/errorfieldsplotsc-1.png" title="Figure 3. Plot of all North Carolina's errors by field name." alt="Figure 3. Plot of all North Carolina's errors by field name." width="500" style="display: block; margin: auto;" />
 
 The `youth` parameter can be set to TRUE for `errorPlot_fields` to view the proportion of "errors" created by youth hunters. Youth hunters are not included in the error plot if `youth = FALSE` (set as default).
 
@@ -554,9 +638,7 @@ The `youth` parameter can be set to TRUE for `errorPlot_fields` to view the prop
 errorPlot_fields(DL1301_proofed, year = 2021, youth = TRUE)
 ```
 
-```
-## Error in mutate(., birth_year = str_extract(birth_date, "(?<=\\/)[0-9]{4}$"), : object 'DL1301_proofed' not found
-```
+<img src="figure/errorfieldsplotyouth-1.png" title="Figure 4. Plot of all location's errors by field name, with stacked colors to indicate if there are youth hunters or Canadian zip codes in the data, two common causes of error." alt="Figure 4. Plot of all location's errors by field name, with stacked colors to indicate if there are youth hunters or Canadian zip codes in the data, two common causes of error." width="500" style="display: block; margin: auto;" />
 
 It is possible to add any `ggplot2` components to these plots. For season total data specifically, the plot can be facet_wrapped using either dl_cycle or dl_date. The example below demonstrates how this package's functions can interact with the tidyverse and shows an example of an `errorPlot_fields` facet_wrap (using a subset of 4 download cycles)
 
@@ -581,9 +663,7 @@ The `errorPlot_states` function plots error proportions per state. You may optio
 errorPlot_states(DL1301_proofed)
 ```
 
-```
-## Error in select(., errors, dl_state): object 'DL1301_proofed' not found
-```
+<img src="figure/errorplotstates-1.png" title="Figure 5. Plot of proportion of error by state." alt="Figure 5. Plot of proportion of error by state." width="500" style="display: block; margin: auto;" />
 
 ### errorPlot_dl
 
@@ -606,7 +686,20 @@ errorTable(DL1301_proofed)
 ```
 
 ```
-## Error in select(., errors, dl_state): object 'DL1301_proofed' not found
+## # A tibble: 98 x 3
+##    dl_state error           error_count
+##    <chr>    <chr>                 <dbl>
+##  1 AK       issue_date                1
+##  2 AK       registration_yr           1
+##  3 AL       birth_date              157
+##  4 AL       email                     3
+##  5 AL       firstname                 5
+##  6 AL       suffix                    5
+##  7 AL       zip                      10
+##  8 CA       birth_date              212
+##  9 CA       dove_bag                 65
+## 10 CA       title                     2
+## # ... with 88 more rows
 ```
 
 Errors can be reported by only location by turning off the `field` parameter.
@@ -617,7 +710,20 @@ errorTable(DL1301_proofed, field = "none")
 ```
 
 ```
-## Error in select(., errors, dl_state): object 'DL1301_proofed' not found
+## # A tibble: 28 x 2
+##    dl_state error_count
+##    <chr>          <dbl>
+##  1 AK                 2
+##  2 AL               180
+##  3 CA               279
+##  4 CO               116
+##  5 CT               260
+##  6 FL               104
+##  7 GA               122
+##  8 IA              2988
+##  9 ID               222
+## 10 IN                71
+## # ... with 18 more rows
 ```
 
 Errors can be reported by only field by turning off the `loc` parameter.
@@ -628,7 +734,23 @@ errorTable(DL1301_proofed, loc = "none")
 ```
 
 ```
-## Error in select(., errors, dl_state): object 'DL1301_proofed' not found
+## # A tibble: 14 x 2
+##    error           error_count
+##    <chr>                 <dbl>
+##  1 birth_date             2348
+##  2 city                      1
+##  3 dove_bag                106
+##  4 ducks_bag              2937
+##  5 email                   277
+##  6 firstname                49
+##  7 hunt_mig_birds           11
+##  8 issue_date                1
+##  9 lastname                  5
+## 10 registration_yr           1
+## 11 state                     1
+## 12 suffix                   40
+## 13 title                     3
+## 14 zip                     132
 ```
 
 Location can be specified.
@@ -639,7 +761,12 @@ errorTable(DL1301_proofed, loc = "CA")
 ```
 
 ```
-## Error in select(., errors, dl_state): object 'DL1301_proofed' not found
+## # A tibble: 3 x 3
+##   dl_state error      error_count
+##   <chr>    <chr>            <dbl>
+## 1 CA       birth_date         212
+## 2 CA       dove_bag            65
+## 3 CA       title                2
 ```
 
 Field can be specified.
@@ -650,7 +777,10 @@ errorTable(DL1301_proofed, field = "suffix")
 ```
 
 ```
-## Error in select(., errors, dl_state): object 'DL1301_proofed' not found
+## # A tibble: 1 x 2
+##   error  error_count
+##   <chr>        <dbl>
+## 1 suffix          40
 ```
 
 Total errors for a location can be pulled.
@@ -661,7 +791,10 @@ errorTable(DL1301_proofed, loc = "CA", field = "none")
 ```
 
 ```
-## Error in select(., errors, dl_state): object 'DL1301_proofed' not found
+## # A tibble: 1 x 2
+##   dl_state total_errors
+##   <chr>           <dbl>
+## 1 CA                279
 ```
 
 Total errors for a field in a particular location can be pulled.
@@ -672,7 +805,10 @@ errorTable(DL1301_proofed, loc = "CA", field = "dove_bag")
 ```
 
 ```
-## Error in select(., errors, dl_state): object 'DL1301_proofed' not found
+## # A tibble: 1 x 3
+##   dl_state error    error_count
+##   <chr>    <chr>          <dbl>
+## 1 CA       dove_bag          65
 ```
 
 ### redFlags
@@ -686,7 +822,11 @@ redFlags(DL1301_proofed, type = "state", threshold = 0.03)
 ```
 
 ```
-## Error in select(., errors, dl_state): object 'DL1301_proofed' not found
+## # A tibble: 2 x 5
+##   dl_state count_errors count_correct proportion flag        
+##   <chr>           <int>         <int>      <dbl> <chr>       
+## 1 CT                260          6015     0.0414 error > 0.03
+## 2 IA               2988         76387     0.0376 error > 0.03
 ```
 
 <b>By field.</b>
@@ -698,7 +838,11 @@ redFlags(DL1301_proofed, type = "field", threshold = 0.01)
 ```
 
 ```
-## Error in select(., errors): object 'DL1301_proofed' not found
+## # A tibble: 2 x 5
+##   errors     count_errors count_correct proportion flag        
+##   <chr>             <int>         <int>      <dbl> <chr>       
+## 1 ducks_bag          2937         45522     0.0606 error > 0.01
+## 2 birth_date         2348         46111     0.0485 error > 0.01
 ```
 
 ## Troubleshooting
