--- a/vignettes/migbirdHIP_workflow.Rmd
+++ b/vignettes/migbirdHIP_workflow.Rmd
@@ -262,10 +262,11 @@ Records are kept when they meet the below criteria (in order of importance):
 
 1. The record in the group has the most recent issue date.
 2. Records do not contain all 1s or all 0s in bag columns.
-3. For duplicates from Atlantic Flyway states (ME, VT, NH, MA, RI, CT, NY, PA, NY, DE, MD, VA, WV, NC, SC, GA, FL), keep records with a 2 in brant or seaduck.
+3. For duplicates from sea duck states (AK, CA, CT, DE, MA, MD, ME, NH, NJ, NY, RI, VA), keep records with a 2 in seaduck.
+4.  For duplicates from brant states (AK, CA, CT, DE, MA, MD, NH, NJ, NY, NC, RI, VA), keep records with a 2 in brant.
 4. If records are tied, one is chosen randomly.
 
-A new field called "record_type" is added to the data after the above deduplicating process. Every HIP record is labeled "HIP". Permit states WA, OR, CO, and SD send HIP and permit records separately, which are labeled "HIP" and "PMT" respectively. Dove records from Iowa are labeled "IAD" (which unlike PMT records, there can only be 1 of these per hunter).
+A new field called "record_type" is added to the data after the above deduplicating process. Every HIP record is labeled "HIP". Permit states WA, OR, CO, and SD send HIP and permit records separately, which are labeled "HIP" and "PMT" respectively.
 
 Note: This function replaces "." values with NA in non-permit species columns for WA, OR, CO, and SD records.
 
@@ -324,7 +325,7 @@ validate(DL1301_fixed, type = "horizontal")
 ##  4 WV20211229.txt 2         183     294       0.622
 ##  5 IN20211229.txt 1         406     690       0.588
 ##  6 MN20211229.txt 1         171     297       0.576
-##  7 WA20211229.txt 1         816    1460       0.559
+##  7 WA20211229.txt 1         815    1460       0.558
 ##  8 WA20211215.txt 1         937    1737       0.539
 ##  9 KY20211228.txt 1         528     984       0.537
 ## 10 NE20211217.txt 1         477     903       0.528
